add art gallery app

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,663 @@
-*{box-sizing:border-box;margin:0;padding:0}a{color:inherit;text-decoration:none}ul{list-style:none}button{background:none;border:none;color:inherit;font:inherit}@-webkit-keyframes fade-up{0%{opacity:0;transform:translateY(30px)scale(.9)}to{opacity:1;transform:translateY(0)}}@keyframes fade-up{0%{opacity:0;transform:translateY(30px)scale(.9)}to{opacity:1;transform:translateY(0)}}@-webkit-keyframes fade-down{0%{opacity:0;transform:translateY(-30px)scale(.9)}to{opacity:1;transform:translateY(0)}}@keyframes fade-down{0%{opacity:0;transform:translateY(-30px)scale(.9)}to{opacity:1;transform:translateY(0)}}@-webkit-keyframes fade-left{0%{opacity:0;transform:translateX(30px) translateY(-50%) scale(.9)}to{opacity:1;transform:translateX(0) translateY(-50%) scale(1)}}@keyframes fade-left{0%{opacity:0;transform:translateX(30px) translateY(-50%) scale(.9)}to{opacity:1;transform:translateX(0) translateY(-50%) scale(1)}}@-webkit-keyframes fade-in{0%{opacity:0}to{opacity:1}}@keyframes fade-in{0%{opacity:0}to{opacity:1}}html{--default-opacity:0.02;--hover-opacity:0.1}body,html{overflow-x:hidden}body{background-color:#000;color:#fff;font-family:Inter,sans-serif;position:relative;scrollbar-width:none}body::-webkit-scrollbar{display:none}.color{background-image:radial-gradient(closest-side,hsla(0,0%,100%,.21),#000);height:1000px;left:15%;position:absolute;top:-570px;width:1000px;z-index:-1}.header{align-items:center;display:flex;justify-content:space-between;padding:42px 62px;position:fixed;width:100%}.logo{-webkit-animation:fade-down .5s .4s backwards;animation:fade-down .5s .4s backwards;border-radius:50px;-o-object-fit:cover;object-fit:cover;width:55px}.btn{background-color:#fff;border-radius:5000px;color:#000;font-size:.75rem;font-weight:500;letter-spacing:.03125rem;padding:10px 20px;text-transform:uppercase;transition:all .3s}.btn:hover{transform:scale(1.15)}.btn--about,.btn--contact{-webkit-animation:fade-down .5s .4s backwards;animation:fade-down .5s .4s backwards}.btn--about{font-size:.6875rem;position:absolute;right:195px}.main{margin:-10px auto 90px;max-width:1000px;padding:0 25px;text-align:left}.intro{-webkit-animation:fade-up .5s;animation:fade-up .5s;padding-top:125px}.first-heading{align-items:center;display:flex;font-size:1.5rem;font-weight:600;justify-content:left;opacity:.92}.text{font-size:1rem;font-weight:300;line-height:1.1;margin-top:11 px;opacity:.92}.text--second{display:block}.about{-webkit-animation:fade-up .5s;animation:fade-up .5s;padding-top:125px}.text2{align-items:left;font-size:1rem;font-weight:300;justify-content:left;line-height:1.5;margin-top:11 px;opacity:.92}.work{-webkit-animation:fade-up 1.6s .2s backwards;animation:fade-up 1.6s .2s backwards;margin-top:60px}.top{align-items:center;display:flex;justify-content:space-between;margin-bottom:35px}.second-heading{font-size:1rem;font-weight:500px}.filters{-moz-column-gap:40px;column-gap:40px;display:flex}.filter-btn{cursor:pointer;font-size:.8125rem;letter-spacing:.03125rem;opacity:.6;text-transform:uppercase;transition:all .4s}.filter-btn--active,.filter-btn:hover{opacity:1}.grid{border-radius:10px;display:grid;gap:25px;grid-template-columns:1fr 1fr 1fr;grid-template-rows:300px 300px 300px}.grid,.project{position:relative}.project{border-radius:5px;overflow:hidden;transition:all .4s}.grid-img{border:1px solid #fff;border-bottom-left-radius:8px;border-bottom-right-radius:8px;border-top-left-radius:8px;border-top-right-radius:8px;height:100%;-o-object-fit:scale-down;object-fit:scale-down;transition:all .4s;width:100%}.project:before{background-color:#000;content:"";height:100%;opacity:var(--default-opacity);position:absolute;transition:.4s;width:100%;z-index:10}.project:hover:before{opacity:.1;transform:var(--hover-opacity)}.project-info{bottom:0;opacity:0;padding:24px;position:absolute;text-align:left;transform:translateY(10px);transition:all .4s;z-index:100}.project-info .playButton{background:rgba(0,0,0,.5);border:1px solid #fff;border-radius:10px;font-size:1.5625rem;padding:5px 25px}.project-info .link-item,.project-info .playButton{cursor:pointer;display:inline-block;text-align:center}.project-info .link-item{font-size:.75rem;padding:5px}.project-info .playButton:hover{border:1px solid #c70000}.project:hover .project-info{background:rgba(0,0,0,.2);border-radius:25px;opacity:1;transform:translate(0)}.third-heading{font-size:1rem}.description{font-size:.875rem;margin:3px 0 24px;opacity:.9}.technologies{-moz-column-gap:14px;column-gap:14px;display:flex;font-size:.625rem;letter-spacing:.0625rem;opacity:.8;text-transform:uppercase}.fade{background-image:linear-gradient(0deg,#000,transparent);bottom:0;height:800px;pointer-events:none;position:absolute;transition:all .6s;width:100%}.project:hover .grid-img{filter:blur(4px)}.links{-webkit-animation:fade-left .5s .8s backwards;animation:fade-left .5s .8s backwards;position:fixed;right:62px;top:50%;transform:translateY(-50%)}.link-item{transition:all .3s}.link-item:not(:last-child){margin-bottom:8px}.link-item:hover{transform:scale(1.15)}.link-img{height:20px;width:20px}.footer{border-top:1px solid hsla(0,0%,100%,.1);color:hsla(0,0%,100%,.4);display:flex;margin:0 auto;max-width:950px;padding:20px 0 26px}.copyright{font-size:.75rem}.popupVid{align-items:center;background:rgba(0,0,0,.95);display:flex;height:100%;justify-content:center;left:50%;opacity:0;position:fixed;top:50%;transform:translate(-50%,-50%);visibility:hidden;width:100%;z-index:10000}.popupVid.active{-webkit-animation:fade-in .3s backwards;animation:fade-in .3s backwards;opacity:1;visibility:visible}.popupVid iframe{max-width:1200px;outline:none;position:relative}.popupVid span{cursor:pointer;font-size:3.875rem;height:162px;opacity:.8;position:relative;right:20px;top:-180px;width:12px}@media (max-width:1215px){.header{padding:25px;position:absolute}.btn--about{right:175px}.links{-webkit-animation-name:fade-down;animation-name:fade-down;display:flex;left:82px;position:absolute;right:auto;top:32px;transform:none}.link-item:not(:last-child){margin-right:12px}}@media (max-width:1000px){.intro{padding-top:100px}.work{margin-top:35px}.main{margin-bottom:35px}.filters{display:none}.footer{border:initial;max-width:1000px;padding-left:25px;padding-right:25px}}@media (max-width:991px){.popupVid iframe{max-width:90%}}@media (max-width:825px){.grid{gap:15px;grid-template-columns:1fr 1fr;grid-template-rows:300px 300px 300px}.project:first-child{grid-row:1/2}.project:nth-child(3){grid-column:1/2;grid-row:2/3}.project:nth-child(4){grid-column:2/3;grid-row:2/3}.project:nth-child(5){grid-column:1/2;grid-row:3/4}.project:nth-child(6){grid-column:2/3;grid-row:3/4}.project-info{opacity:1}.grid-img{filter:blur(4px)}}@media (max-width:620px){.color{left:-15%}.header{padding:15px}.btn--about,.btn--contact{font-size:.6875rem;padding:8px 16px}.links{left:70px;top:22px}.first-heading{font-size:2.625rem}.text{font-size:1.875rem}.main{padding:0 15px}.footer{padding-left:15px;padding-right:15px}}@media (max-width:520px){html{--default-opacity:0.4;--hover-opacity:0.3}.text--second,.text2{display:inline}.top{margin-bottom:20px}.grid{grid-template-columns:1fr;grid-template-rows:repeat(6,250px)}.grid .project{grid-column:initial;grid-row:initial}.copyright{font-size:.6875rem}}
+/* RESET */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  border: none;
+  background: none;
+  color: inherit;
+  font: inherit;
+}
+
+/* KEYFRAMES*/
+@keyframes fade-up {
+  0% {
+    opacity: 0;
+    transform: translateY(30px)scale(0.9);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px)scale(0.9);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fade-left {
+  0% {
+    opacity: 0;
+    transform: translateX(30px) translateY(-50%) scale(0.9);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0px) translateY(-50%) scale(1);
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    ;
+  }
+
+  100% {
+    opacity: 1;
+    ;
+  }
+}
+
+
+/* BASE STYLES */
+html {
+  --default-opacity: 0.02;
+  --hover-opacity: 0.1;
+  overflow-x: hidden;
+}
+
+body {
+  background-color: #000;
+  font-family: 'Inter', sans-serif;
+  color: #fff;
+  position: relative;
+  overflow-x: hidden;
+  scrollbar-width: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+.color {
+  height: 1000px;
+  width: 1000px;
+  background-image: radial-gradient(closest-side, rgba(255, 255, 255, 0.21), #000);
+  position: absolute;
+  top: -570px;
+  left: 15%;
+  z-index: -1;
+}
+
+
+/* HEADER */
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 42px 62px;
+  position: fixed;
+  width: 100%;
+}
+
+.logo {
+  width: 55px;
+  border-radius: 50px;
+  object-fit: cover;
+  animation: fade-down 0.5s 0.4s backwards;
+}
+
+
+/*BUTTON*/
+
+.btn {
+  background-color: #fff;
+  font-size: 12px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #000;
+  letter-spacing: 0.5px;
+  padding: 10px 20px;
+  border-radius: 5000px;
+  transition: all 0.3s;
+}
+
+.btn:hover {
+  transform: scale(1.15);
+}
+
+.btn--contact {
+  animation: fade-down 0.5s 0.4s backwards;
+
+}
+
+.btn--about {
+  animation: fade-down 0.5s 0.4s backwards;
+
+  position: absolute;
+  right: 195px;
+  font-size: 11px;
+
+}
+
+/*MAIN*/
+
+.main {
+  max-width: 1000px;
+  margin: 0 auto;
+  text-align: left;
+  margin-top: -10px;
+  margin-bottom: 90px;
+  padding: 0 25px;
+}
+
+
+/*INTRO*/
+
+.intro {
+  padding-top: 125px;
+  animation: fade-up 0.5s;
+}
+
+.first-heading {
+  font-size: 24px;
+  font-weight: 600;
+  opacity: 0.92;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.text {
+  font-size: 16px;
+  font-weight: 300;
+  opacity: 0.92;
+  margin-top: 11 px;
+  line-height: 1.1;
+}
+
+.text--second {
+  display: block;
+}
+
+/* ABOUT*/
+
+.about {
+  padding-top: 125px;
+  animation: fade-up 0.5s;
+}
+
+.text2 {
+  font-size: 16px;
+  font-weight: 300;
+  opacity: 0.92;
+  margin-top: 11 px;
+  line-height: 1.5;
+  justify-content: left;
+  align-items: left;
+}
+
+/*WORK*/
+.work {
+  margin-top: 60px;
+  animation: fade-up 1.6s 0.2s backwards;
+}
+
+/*TOP*/
+.top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 35px;
+}
+
+.second-heading {
+
+  font-size: 16px;
+  font-weight: 500px;
+
+}
+
+/* FILTERS */
+.filters {
+  display: flex;
+  column-gap: 40px;
+}
+
+.filter-item {}
+
+.filter-btn {
+  opacity: 0.6;
+  font-size: 13px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.filter-btn:hover {
+  opacity: 1;
+}
+
+.filter-btn--active {
+  opacity: 1;
+}
+
+/*GRID*/
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 300px 300px 300px;
+  gap: 25px;
+  position: relative;
+  border-radius: 10px;
+
+}
+
+.project {
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
+  transition: all 0.4s;
+}
+
+.grid-img {
+  height: 100%;
+  width: 100%;
+  object-fit: scale-down;
+  border: 1px solid #fff;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  transition: all 0.4s;
+}
+
+.project::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background-color: #000;
+  position: absolute;
+  z-index: 10;
+  opacity: var(--default-opacity);
+  transition: 0.4s;
+}
+
+.project:hover::before {
+  opacity: 0.1;
+  transform: var(--hover-opacity);
+}
+
+/*PROJECT INFO*/
+.project-info {
+  opacity: 0;
+  position: absolute;
+  bottom: 0;
+  z-index: 100;
+  text-align: left;
+  padding: 24px;
+  transform: translateY(10px);
+  transition: all 0.4s;
+}
+
+.project-info .playButton {
+
+  font-size: 25px;
+  cursor: pointer;
+  border: 1px solid rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 25px;
+  ;
+}
+
+.project-info .link-item {
+
+  font-size: 12px;
+  cursor: pointer;
+
+  display: inline-block;
+  text-align: center;
+  padding: 5px 5px;
+  ;
+}
+
+.project-info .playButton:hover {
+
+  border: 1px solid rgb(199, 0, 0);
+
+}
+
+.project:hover .project-info {
+  opacity: 1;
+  transform: translate(0);
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 25px;
+}
+
+.third-heading {
+  font-size: 16px;
+}
+
+.description {
+  font-size: 14px;
+  margin: 3px 0 24px;
+  opacity: 0.9;
+
+
+}
+
+.technologies {
+  font-size: 10px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  display: flex;
+  column-gap: 14px;
+  opacity: 0.8;
+}
+
+/*FADE*/
+
+.fade {
+  height: 800px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-image: linear-gradient(to top, rgb(0, 0, 0), transparent);
+  pointer-events: none;
+  transition: all 0.6s;
+}
+
+.project:hover .grid-img {
+
+  filter: blur(4px);
+  filter: brightness(0.4);
+
+
+}
+
+/* LINKS */
+.links {
+  position: fixed;
+  right: 62px;
+  top: 50%;
+  transform: translateY(-50%);
+  animation: fade-left 0.5s 0.8s backwards;
+}
+
+.link-item {
+  transition: all 0.3s;
+}
+
+.link-item:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.link-item:hover {
+  transform: scale(1.15);
+}
+
+.link {}
+
+.link-img {
+  width: 20px;
+  height: 20px;
+}
+
+/* FOOTER */
+.footer {
+  max-width: 950px;
+  margin: 0 auto;
+  padding: 20px 0 26px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.4);
+  display: flex;
+}
+
+.copyright {
+  font-size: 12px;
+}
+
+/*VIDEOS*/
+
+
+.popupVid {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10000;
+  background: rgba(0, 0, 0, 0.95);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.popupVid.active {
+  visibility: visible;
+  opacity: 1;
+  animation: fade-in 0.3s backwards;
+}
+
+.popupVid iframe {
+  position: relative;
+  max-width: 1200px;
+  outline: none;
+}
+
+.popupVid span {
+  cursor: pointer;
+  position: relative;
+  right: 20px;
+  top: -180px;
+  width: 12px;
+  height: 162px;
+  opacity: 0.8;
+  font-size: 62px;
+}
+
+
+/* MEDIA QUERIES */
+@media (max-width: 1215px) {
+  .header {
+    padding: 25px;
+    position: absolute;
+  }
+
+
+  .btn--about {
+
+    right: 175px;
+  }
+
+  .links {
+    position: absolute;
+    transform: initial;
+    right: initial;
+    top: 32px;
+    left: 82px;
+    display: flex;
+    animation-name: fade-down;
+  }
+
+  .link-item:not(:last-child) {
+    margin-right: 12px;
+  }
+}
+
+
+
+@media (max-width: 1000px) {
+  .intro {
+    padding-top: 100px;
+  }
+
+  .work {
+    margin-top: 35px;
+  }
+
+  .main {
+    margin-bottom: 35px;
+  }
+
+  .filters {
+    display: none;
+  }
+
+  .footer {
+    border: initial;
+    padding-left: 25px;
+    padding-right: 25px;
+    max-width: 1000px;
+  }
+}
+
+@media (max-width: 991px) {
+  .popupVid iframe {
+    max-width: 90%;
+  }
+}
+
+
+@media (max-width: 825px) {
+
+  .grid {
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 300px 300px 300px;
+    gap: 15px;
+  }
+
+  .project:nth-child(1) {
+    grid-row: 1 / 2;
+  }
+
+  .project:nth-child(3) {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+
+  .project:nth-child(4) {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .project:nth-child(5) {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+
+  .project:nth-child(6) {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+
+  .project-info {
+    opacity: 1;
+
+  }
+
+  .grid-img {
+    filter: blur(4px);
+  }
+}
+
+@media (max-width: 620px) {
+  .color {
+    left: -15%;
+  }
+
+  .header {
+    padding: 15px;
+  }
+
+  .btn--contact {
+    font-size: 11px;
+    padding: 8px 16px;
+  }
+
+  .btn--about {
+    font-size: 11px;
+    padding: 8px 16px;
+  }
+
+  .links {
+    top: 22px;
+    left: 70px;
+  }
+
+  .first-heading {
+    font-size: 42px;
+  }
+
+  .text {
+    font-size: 30px;
+  }
+
+  .main {
+    padding: 0 15px;
+  }
+
+  .footer {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+@media (max-width: 520px) {
+  html {
+    --default-opacity: 0.4;
+    --hover-opacity: 0.3;
+  }
+
+  .text--second {
+    display: inline;
+  }
+
+  .text2 {
+    display: inline;
+  }
+
+  .top {
+    margin-bottom: 20px;
+  }
+
+  .grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 250px);
+  }
+
+  .grid .project {
+    grid-column: initial;
+    grid-row: initial;
+  }
+
+  .copyright {
+    font-size: 11px;
+  }
+
+
+
+}
