--- a/styles.css
+++ b/styles.css
@@ -175,7 +175,7 @@ body::-webkit-scrollbar {
 .intro {
   padding-top: 125px;
   animation: fade-up 1.9s;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.1); */
 }
 
 .first-heading {
